styles.css
* {
    margin: 0;
    padding: 0;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,sans-serif;
    box-sizing: border-box;
}

/*Header*/

.header {
    height: 8vh;
    width: 100vw;
    /* border: 2px solid black; */
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: white;
    box-shadow: 3px 0 10px rgb(230, 227, 227);

    position: sticky;
    top: 0;
    z-index: 1000;
}

/*Logo*/

.myntra_logo img {
    height: 50px;
    width: 70px;
}

.logo {
    margin-left: 4%;
    margin-right: 5%;
}

/*Nav Links*/

.nav_bar {
    min-width: 34%;
    display: flex;
    justify-content: space-between;
}

.nav_bar a {
    text-decoration: none;
    text-transform: uppercase;
    color: #282c3f;
    font-size: 14px;
    letter-spacing: .3px;
    font-weight: 700;
    padding: 17px 0;
    border-bottom: 3px solid white;
    box-sizing: border-box;
    /* border: 4px solid black; */
}

.nav_bar a:hover {
    border-bottom: 3px solid #f54e77;
}

.nav_bar a sup {
    color: #ff3f6c;
}
 
#position {
    vertical-align: baseline;
    position: relative;
    top: -0.5em;
    font-size: 75%;
    line-height: 0;
    pointer-events: none;
}

/*Search Bar*/

.search_bar {
    height: 40px;
    min-width: 400px;
    display: flex;
    align-items: center;
    position: relative;
    right: 30px;
}

.search_input {
    color: #696e79;
    background-color: #f5f5f6;
    flex-grow: 1;
    height: 40px;
    border: 0;
     border-radius: 0 4px 4px 0;
}

.search_icon {
    box-sizing: content-box;
    height: 20px;
    padding: 10px;
    background-color: #f5f5f6;
    color: #696e79;
    font-weight: 300;
    border-radius: 4px 0 0 4px;
}

/*Action Bar*/

.action_bar {
    margin-right: 5%;
    display: flex;
    min-width: 200px;
    justify-content: space-around;
   
}

.action_container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.action_name {
    color: #202c3f;
    font-size: 14px;
    letter-spacing: .3px;
    font-weight: 700;
}

.action_icon {
    color: #696e79;
}

/*Main*/

/* Side Fixed Tag*/

.side_tag {
    position: fixed;
    right: 0.5%;
    bottom: 130px;
    width: 36px;
    height: 300px;
    padding: 4px;
    background-color: #535766;
    z-index: 6;
    color: #fff;
    letter-spacing: 1px;
    display: inline-block;
    flex-direction: column-reverse;
    writing-mode: vertical-rl;
    transform: rotate(-180deg);
    font-size: 24px;
    font-weight: 700;
    text-align: center;
    vertical-align: middle;
} 

.arrow {
    transform: rotate(270deg);
    font-size: 40px;
    font-variation-settings: 'wght' 700, 'opsz' 48;
}

/*Banner*/

.first_purchase {
    height: 79px;
    width: 1250px;
    position: relative;
    left: 120px;
    margin-top: 25px;
    background-color: #0367c8;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 0px 50px 50px 0;
}

.off {
    height: 100%;
    width: 60%;
    padding-left: 80px;
    text-transform: uppercase;
    font-size: 40px;
    letter-spacing: 0.5px;
    font-weight: bold;
    color: white;
    display: flex;
    justify-content: start;
    align-items: center;
}

.app {
    height: 100%;
    width: 40%;
    padding-left: 110px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    border-left: 2px dashed white;
    text-transform: capitalize;
     color: white;
    font-size: 22px;
    box-sizing: border-box;
}


.first_purchase .app img {
    height: 28px;
    width: auto;
    vertical-align: middle;
    margin: 0 3px;
}

.main_banner {
    height: 420px;
    width: 1430px;
    background-color: #0367c8;
    margin: 10px 0 0 40px;
    display: flex;  

    /* border: 2px solid black */;
}

.mega_sale {
    height: 100%;
    width:45%;
    float: left;
    display: flex;
    justify-content: center;
    align-items: center;
}

.mega_sale_inner {
    height: 120px;
    width: 250px;
    display: grid;
    grid-template-columns: 4fr 2fr;
    grid-template-rows: 1fr 1fr;
    font-size: 33px;
    font-weight: bold;
    text-transform: uppercase;
}

#mega1 {
    color: #fcfdfb;
    background-color: #1e6f3f;
    grid-column: 1 / 2;
    grid-row: 1 / 2;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 10px;
    border: 2.5px solid #ffa2ff;
    border-radius: 10px;
    margin: 0 1px 1px 0;
}

#mega2 {
        background-color: #ffa2ff;
        color: #1e6f3f;
        grid-column: 2 / 3;
        grid-row: 1 / 2;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 50px;
        font-weight: bolder;
        border-radius: 10px;
        margin: 0 0 1px 1px ;
}

#mega3 {
    color: #fcfdfb;
    background-color: #1e6f3f;
    grid-column: 1 / 3;
    grid-row: 2 / 3;
    display: flex;
    align-items: center;
    padding-left: 10px;
    width: 100%;
    border: 2.5px solid #ffa2ff;
    border-radius: 10px;
    margin: 1px 0 0 0 ;

}

#mega4 {
    height: 120px;
    width: 40px;
    color: #1e6f3f;
    background-color: #ffa2ff;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    writing-mode: vertical-rl;
    transform: rotate(-180deg);
    font-size: 20px;
    font-weight: 700;
    text-align: center;
    vertical-align: middle;
    border-radius: 10px;
    margin-left: 1.5px;
}

.unisex {
    background-color: white;
    color: #0367c8;
    height: 30px;
    width: 70px;
    border: none;
    border-radius: 5px;
    font-weight:500;
    font-size: medium;
    text-align: center;
    vertical-align: middle;
    position: relative;
    top: 190px;
}

#him {
    left: 50px;
}

#her {
    right: 350px;
}

.right_angle {
    background-color: #0367c8;
    color:#f5f5f6;
    border-radius: 50%;
    height: 17px;
    width: 20px;
}

.banner img {
    height: 100%;
    width: 550px;
}

.fifty{
    float: right;
    height: 100%;
    width: 45%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.banner_quote {
    display: block;
}

.percentage_container {
    display: flex;
    justify-content: center;
    align-items: center;

}

.percentage {
    height: 80px;
    width: 220px;
    text-align: center;
    font-size: 50px;
    font-weight: bold;
    color: white;
    border: 4px solid #ffa2ff;
    border-radius: 10px;
}

.per {
    height: 80px;
    width: 100px;
    border-radius: 10px;
    margin-left: 10px;
    text-align: center;
    font-size: 50px;
    font-weight: bold;
    color:#0367c8;
    background-color: #ffa2ff;
    text-transform: uppercase;
}

.quote {
    font-size: 27px;
    font-weight: bold;
    text-transform: capitalize;
    letter-spacing: 1px;
    margin-top: 15px;
    color: white;
    padding-left: 20px;
}

.shop_now {
    display: flex;
    justify-content: space-evenly;
    background-color: #ffa2ff;
    height: 30px;
    width: 1430px;
    margin: 0 0 0 40px;
    color: #0367c8;
    font-size: 18px;
    font-weight: bold;
    text-transform: uppercase;
    align-items: center;
}

.shop_now .right_angle {
    color: #ffa2ff;
}

.rupee {
    font-size: 20px;
} 

.side_tag .rupee {
     transform: rotate( 90deg);
}

.bottom_part {
    display: flex;
}

.border_box {
    border: 2px solid #0367c8;
    height: 60px;
    width: 1370px; 
    position: relative;
    left: 70px;
    display: block;
    text-align: center;
    border-radius: 10px;
}

.border_box h3 {
    font-size: 25px;
}

.border_box p {
    color:#535766;
    font-weight: 500;
}

#T_C {
    writing-mode: vertical-rl;
    transform: rotate(-180deg);
    font-size: 10px;
    position: relative;
    left: 70px;
} 

/*Budget Bargains Page*/

.bargain_container h1 {
    color: #653ddf;
    text-transform: uppercase;
    font-size: 45px;
    font-weight: 800;
    text-align: center;
    margin: 50px 0 50px 0;
}

.offer_container {
    height: 420px;
    width: 1430px;
    margin: 10px 0 0 40px;
    display: flex;
    justify-content: space-around;  
}

.offers img{
    height: 365px;
    width: 265px;
    object-fit: cover;
    border-radius: 10px;
}

.offers {
    width: 265px;
    height: 370px;
    /* background-color: #0367c8; */
    border-radius: 10px;
    border: 2px solid rgba(234, 229, 229, 0.938);
    padding: 2px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.worthy_tag {
    background-color: #653ddf;
    height: 72px;
    width: 350px;
    line-height: 20px;
    text-align: center;
    position: relative;
    left: 40%;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    border-top-left-radius: 9px;
    border-bottom-left-radius: 9px;
    padding-top: 8px;
}

.worthy_tag::before {
    content: "";
    width: 53px;
    height: 53px;
    background-color: #653ddf;
    position: absolute;
    left: -20px;
    top: 50%;
    transform: translateY(-50%) rotate(45deg);
    border-radius: 3px;
} 

.worthy_tag .circle {
    color: rgb(230, 227, 227);
    font-size: 10px;
    position: absolute;
    left: -8px;
    top: 40%;
    transform: translateX(-10%);
}

.worthy_tag h2 {
    color:rgb(230, 227, 227);
    text-transform: uppercase;
    font-weight: bold;
}

.worthy_tag p {
    text-transform: capitalize;
    color:rgb(230, 227, 227);
    font-weight: 450;
}

.worthy_tag .right_angle {
    background-color: white;
    color: #653ddf;
}

/* Shop By Category Page */

.shop_cate h1 {
    color: #010101;
    text-align: center;
    text-transform: uppercase;
    font-size: 45px;
    font-weight: 800;
    margin: 50px 0 30px 0;
}

.category_container {
    height: 1000px;
    width: 1430px;
    margin: 8px 12px 0 50px;
    display: flex;  
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;

    /* background-color: #0367c8; */
}

.categories {
    border: 4px solid #653ddf;
    margin: 0px 30px 30px 0;
    width: 200px;
    height: 300px;
    overflow: hidden;
}

.categories img {
   height: 100%;
    width: 100%;
    object-fit: fill;
    display: block;
}

/* Knockout Page */

.knockout {
    height: 200px;
    width: 1300px;
    border: 5px solid #0367c8;
    background-color: #fbe3c4;
    margin: 10px 12px 0 100px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.knock_img img {
    height: 250px;
    position: relative;
    bottom: 28px;
}

.knockout_offer {
    display: block;
    color:#0367c8;
    text-align: center;
    line-height: 20px;
}

.knockout_offer h1 {
    text-transform: uppercase;
    font-size: 40px;
    margin-bottom: 10px;
}

.knockout_offer p {
    font-size: 20px;
    font-weight: 600;
}

.download {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    margin-top: 10px;
}

.download_text {
    font-size: 16px;
    font-weight: bold;
    color:#0367c8;
}

.store_buttons_container {
    display: flex;;
    gap: 15px;
}

.store {
    height: 45px;
    width: 145px;
    border: 1px solid #d4d5d9;
    border-radius: 8px;
    background-color: white;
    color:#535766;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding: 0 10px;
    gap: 8px;
    cursor: pointer;
}

.store i {
    font-size: 20px;
    color: #282c3f;
}

.store_text {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
}

.store .sub_text {
    font-size: 9px;
    color: #7e808c;
    margin: 0;
    line-height: 1.2;
}

.store .main_text {
    font-size: 13px;
    font-weight: 700;
    color: #282c3f;
    margin: 0;
    line-height: 1.2;
}
 
.knockout_offer p img {
     height: 28px;
    width: auto;
    vertical-align: middle;
    margin: 0 3px;
}

